tests/k8s_testcases/network-policy-checks-bad-path/peers_wrong_keys.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: to-from-peer-test-keys
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      app: helm
  policyTypes:
  - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              tier: frontend
    # wrong keys
    - from:
        - port: 44134
